--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 target/
-.mvn
+.mvn/wrapper
 !**/src/main/**/target/
 !**/src/test/**/target/
+
 
 ### NetBeans ###
 /nbproject/private/
@@ -12,3 +13,4 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+
