--- a/festivalBackend/pom.xml
+++ b/festivalBackend/pom.xml
@@ -53,8 +53,13 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.38</version> <!-- latest stable as of 2025 -->
+            <version>1.18.38</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>6.2.2</version> <!-- or match your Spring Boot version -->
         </dependency>
 
     </dependencies>
