--- a/festivalBackend/.gitignore
+++ b/festivalBackend/.gitignore
@@ -1,5 +1,8 @@
 target/
-.mvn
+.mvn/
+!.mvn/wrapper/maven-wrapper.properties
+!.mvn/wrapper/maven-wrapper.jar
+
 !**/src/main/**/target/
 !**/src/test/**/target/
 
