--- a/festivalBackend/.gitignore
+++ b/festivalBackend/.gitignore
@@ -1,18 +1,18 @@
+# Compiled class files
 target/
-!.mvn/wrapper/maven-wrapper.properties
-!.mvn/wrapper/maven-wrapper.jar
 
-!**/src/main/**/target/
-!**/src/test/**/target/
+# Maven wrapper files should be committed
+!mvn/wrapper/maven-wrapper.jar
+!mvn/wrapper/maven-wrapper.properties
+
+# IntelliJ / NetBeans / Eclipse
+.idea/
+*.iml
+.nbproject/private/
+nbbuild/
+dist/
+nbdist/
+*.class
 
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 
